# 01-api-rest-axum

./: .gitignore  README.md  http.txt  test_api.ps1
api-rest-axum/: .gitignore  Cargo.toml  README.md  cargo_build_output.txt  cargo_run_err.txt  cargo_run_output.txt  out.txt
api-rest-axum/migrations/: 001_create_products.sql  002_add_indexes.sql
api-rest-axum/src/: app.rs  config.rs  db.rs  error.rs  lib.rs  main.rs
api-rest-axum/src/dto/: mod.rs  product_request.rs  product_response.rs  validated_json.rs
api-rest-axum/src/models/: product.rs
api-rest-axum/src/repository/: product_repo.rs
api-rest-axum/src/routes/: health.rs  mod.rs  openapi.rs  products.rs
api-rest-axum/src/services/: product_service.rs
api-rest-axum/tests/: integration_test.rs
archives/: 01-api-rest-axum.md
